# imperial_hft

./: .clangd  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt
benchmarks/design_patterns/: CMakeLists.txt
benchmarks/design_patterns/branch_reduction/: CMakeLists.txt
benchmarks/design_patterns/cache_warming/: CMakeLists.txt
benchmarks/design_patterns/compile_time_dispatch/: CMakeLists.txt
benchmarks/design_patterns/constexpr/: CMakeLists.txt  bench.cpp
benchmarks/design_patterns/inlining/: CMakeLists.txt  bench.cpp
benchmarks/design_patterns/lock_free/: CMakeLists.txt
benchmarks/design_patterns/loop_unrolling/: CMakeLists.txt
benchmarks/design_patterns/mixing_data_types/: CMakeLists.txt
benchmarks/design_patterns/prefetching/: CMakeLists.txt
benchmarks/design_patterns/short_circuit/: CMakeLists.txt  bench.cpp
benchmarks/design_patterns/signed_and_unsigned/: CMakeLists.txt
benchmarks/design_patterns/simd/: CMakeLists.txt  bench.cpp
benchmarks/design_patterns/slowpath_remove/: CMakeLists.txt  bench.cpp
benchmarks/statarb/: CMakeLists.txt
benchmarks/statarb/pairs_trading/: CMakeLists.txt  bench.cpp
benchmarks/statarb/pairs_trading_optimized/: CMakeLists.txt  bench.cpp
benchmarks/statarb/pt_buffer/: CMakeLists.txt  bench.cpp
benchmarks/statarb/pt_inlining/: CMakeLists.txt  bench.cpp
benchmarks/statarb/pt_simd/: CMakeLists.txt  bench.cpp
src/lib/disruptor/: BusySpinWaitStrategy.cpp  BusySpinWaitStrategy.h  CMakeLists.txt
