add_subdirectory(branch_reduction)
add_subdirectory(cache_warming)
add_subdirectory(compile_time_dispatch)
add_subdirectory(constexpr)
add_subdirectory(inlining)
add_subdirectory(lock_free)
add_subdirectory(loop_unrolling)
add_subdirectory(mixing_data_types)
add_subdirectory(prefetching)
add_subdirectory(short_circuit)
add_subdirectory(signed_and_unsigned)
add_subdirectory(simd)
add_subdirectory(slowpath_remove)
