add_subdirectory(branch_reduction)
add_subdirectory(cache_warming)
add_subdirectory(compile_time_dispatch)
add_subdirectory(constexpr)
add_subdirectory(inlining)
add_subdirectory(lock_free)
add_subdirectory(loop_unrolling)
add_subdirectory(mixing_data_types)
add_subdirectory(prefetching)
add_subdirectory(short_circuit)
add_subdirectory(signed_and_unsigned)
add_subdirectory(simd)
add_subdirectory(slowpath_remove)

add_custom_target(benchmarks_design_patterns)
add_dependencies(benchmarks_design_patterns
    branch_reduction
    cache_warming
    compile_time_dispatch
    constexpr
    inlining
    lock_free
    loop_unrolling
    mixing_data_types
    prefetching
    short_circuit
    signed_and_unsigned
    simd
    slowpath_remove
)
